--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/TrackListFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.example.musicandroid.FirstFragment"
+        android:id="@+id/TrackListFragment"
+        android:name="com.example.musicandroid.list.TrackListFragment"
         android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
+        tools:layout="@layout/fragment_track_list">
 
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
@@ -23,6 +23,6 @@
 
         <action
             android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
+            app:destination="@id/TrackListFragment" />
     </fragment>
 </navigation>
